# lispy

./: .gitignore  .gitmodules  README.md  pyproject.toml
lispy/: main.py
