[tool.poetry]
name = "lispy"
version = "0.1.0"
description = "Lisp interpreter implemented in Python"
authors = ["otherJL0 <jonathanglopez@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
lispy = "lispy:main"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
