[tool.poetry]
name = "lispy"
version = "0.1.0"
description = "Lisp interpreter implemented in Python"
authors = ["otherJL0 <jonathanglopez@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
lispy = "lispy:main"

[tool.poetry.dependencies]
python = "^3.10"
prompt-toolkit = "^3.0.22"
tree-sitter = "^0.19.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
mypy = "^0.910"
isort = "^5.10.1"
black = "^21.10b0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
